test/typecheck/pass/let_subtyp_bug.sail
let ([|5|]) y = 2

val unit -> nat effect pure test

function test() = {
  let ([|5|]) x = 2 in
  x
}
 