test/typecheck/fail/cast_lexp1.sail

val unit -> nat effect pure test

function nat test () = {
  (int) y := 10;
  y
}
